# coremaker

./: .gitignore  README.md  packages.txt  pyproject.toml  requirements.yml  ruff.toml  setup.py  test_requirements.yml
.claude/: settings.local.json
.github/workflows/: docs.yml  test.yml
coremaker/: __init__.py  amounts.py  component.py  core.py  example.py  grid.py  mesh.py  plane_intersection.py  transform.py  tree.py  units.py
coremaker/elements/: assembly.py  box.py  cylindrically_symmetric.py  util.py
coremaker/geometries/: __init__.py  annulus.py  ball.py  bare.py  box.py  cylinder.py  hex.py  holed.py  infinite.py  triprism.py  union.py  utils.py
coremaker/grids/: __init__.py  cartgrid.py  cartspaced.py  hexgrid.py  lattice.py  null.py  util.py
coremaker/materials/: __init__.py  _chemical_parser.py  absorbers.py  aluminium.py  gases.py  mixture.py  reflectors.py  steel.py  util.py  water.py  zirconium.py
coremaker/protocols/: __init__.py  component.py  core.py  element.py  geometry.py  grid.py  mixture.py  node.py  surface.py
coremaker/surfaces/: __init__.py  cylinder.py  plane.py  sphere.py  surfacecache.py  util.py
coremaker/visualization/: __init__.py  _core_geometry.py  _engine.py  _geometry.py  _types.py  coregeometry.py  geometry.py  types.py
docs/: requirements.yml
docs/source/: conf.py  (+17 more)
tests/: conftest.py  test_constructions.py  test_core.py  test_geometries.py  test_grids.py  test_mesh.py  test_mixtures.py  test_serialization.py  test_surfacecache.py  test_surfaces.py  test_transform.py  test_tree.py  test_visualization.py
(+15 files in other folders)
